Complete desktop style

--- a/index.html
+++ b/index.html
@@ -12,10 +12,8 @@
         <div class="result">
             <h1>Your Result</h1>
             <div class="circle">
-                <h2>
-                    76
-                    <span>of 100</span>
-                </h2>
+                <h2>76</h2>
+                <span>of 100</span>
             </div>
             <h3>Great</h3>
             <p>Your performance exceed 65% of the people conducting the test here!</p>
@@ -62,6 +60,7 @@
                     <span>/ 100</span>
                 </h4>
             </div>
+            <button>Continue</button>
         </div>
     </main>
 </body>
