refactor some code

--- a/index.html
+++ b/index.html
@@ -12,53 +12,47 @@
         <div class="result">
             <h1>Your Result</h1>
             <div class="circle">
-                <h2>76</h2>
-                <span>of 100</span>
+                <h2>
+                    76
+                    <span>of 100</span>
+                </h2>
             </div>
             <h3>Great</h3>
             <p>Your performance exceed 65% of the people conducting the test here!</p>
         </div>
         <div class="details">
-            <p>Summary</p>
+            <h2>Summary</h2>
             <div class="item">
-                <div class="title">
-                    <img src="./svgs/icon-reaction.svg" alt="Reaction icon">
-                    <p>Reaction</p>
-                </div>
-                <h4>
+                <img src="./svgs/icon-reaction.svg" alt="Reaction icon">
+                <h3>Reaction</h3>
+                <p>
                     80 
                     <span>/ 100</span>
-                </h4>
+                </p>
             </div>
             <div class="item">
-                <div class="title">
-                    <img src="./svgs/icon-memory.svg" alt="Memory icon">
-                    <p>Memory</p>
-                </div>
-                <h4>
+                <img src="./svgs/icon-memory.svg" alt="Memory icon">
+                <h3>Memory</h3>
+                <p>
                     92 
                     <span>/ 100</span>
-                </h4>
+                </p>
             </div>
             <div class="item">
-                <div class="title">
-                    <img src="./svgs/icon-verbal.svg" alt="Verbal icon">
-                    <p>Verbal</p>
-                </div>
-                <h4>
+                <img src="./svgs/icon-verbal.svg" alt="Verbal icon">
+                <h3>Verbal</h3>
+                <p>
                     61 
                     <span>/ 100</span>
-                </h4>
+                </p>
             </div>
             <div class="item">
-                <div class="title">
-                    <img src="./svgs/icon-visual.svg" alt="Visual icon">
-                    <p>Visual</p>
-                </div>
-                <h4>
+                <img src="./svgs/icon-visual.svg" alt="Visual icon">
+                <h3>Visual</h3>
+                <p>
                     73 
                     <span>/ 100</span>
-                </h4>
+                </p>
             </div>
             <button>Continue</button>
         </div>
